changed secondary/warining buttons to primary buttons

--- a/views/viagens/adicionar-chegada.ejs
+++ b/views/viagens/adicionar-chegada.ejs
@@ -92,7 +92,7 @@
         </form>
 
         
-        <button type="button" class="btn btn-warning" onclick="mostrarOcorrencia()">Adicionar Ocorrência</button>
+        <button type="button" class="btn btn-primary" onclick="mostrarOcorrencia()">Adicionar Ocorrência</button>
 
         <!-- Campos de Ocorrência -->
         <div id="ocorrencia" style="display: none;">
@@ -106,7 +106,7 @@
             </div>
         </div>
 
-        <button type="button" class="btn btn-secondary" onclick="location.href='/login'">Voltar</button>
+        <button type="button" class="btn btn-primary" onclick="location.href='/login'">Voltar</button>
     </div>
     <!-- Footer -->
     <%- include('../partials/footer.ejs') %>
