--- a/views/viagens/adicionar-saida.ejs
+++ b/views/viagens/adicionar-saida.ejs
@@ -123,7 +123,7 @@
             </div>
             <button type="submit" class="btn btn-primary">Confirmar</button>
         </form>
-        <button type="button" class="btn btn-secondary" onclick="location.href='/login'">Voltar</button>
+        <button type="button" class="btn btn-primary" onclick="location.href='/login'">Voltar</button>
     </div>
     <!-- Footer -->
     <%- include('../partials/footer.ejs') %>
