--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,16 +8,21 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/assets/menus.css">
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     
-  
+    <!-- FAVICON -->
+    <link href="/assets/img/Logo1.png" rel="icon">
+    <!-- ICONS -->
+    <script src="https://kit.fontawesome.com/34e6a5e2fc.js" crossorigin="anonymous"></script>
     
 </head>
 <body>
 
     <!-- Header -->
-    <header class="header">
-        <h1>Diário de Bordo - Login</h1>
-    </header>
+    <%- include('./partials/header.ejs', { title: 'Diário de Bordo - Login' }) %>
 
     <!-- Main Content -->
     <div class="container d-flex justify-content-center align-items-center main-content">
@@ -46,12 +51,8 @@
     </div>
 
     <!-- Footer -->
-    <footer class="footer">
-        <p class="text-center">© 2024 Diário de Bordo. Todos os direitos reservados.</p>
-    </footer>
+    <%- include('./partials/footer.ejs') %>
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    
 </body>
 </html>
