--- a/views/viagens/adicionar-chegada.ejs
+++ b/views/viagens/adicionar-chegada.ejs
@@ -82,7 +82,7 @@
             </div>
             <div class="form-group">
                 <label for="kmChegada">Quilometragem final:</label>
-                <input type="number" id="kmChegada" name="kmChegada" class="form-control" required>
+                <input type="integer" id="kmChegada" name="kmChegada" class="form-control" required>
             </div>
             <div class="form-group">
                 <label for="dataChegada">Data e hora de Chegada:</label>
