--- a/views/viagens/adicionar-saida.ejs
+++ b/views/viagens/adicionar-saida.ejs
@@ -115,7 +115,7 @@
             </div>
             <div class="form-group">
                 <label for="kmSaida">Quilometragem Inicial:</label>
-                <input type="number" id="kmSaida" name="kmSaida" class="form-control" required>
+                <input type="integer" id="kmSaida" name="kmSaida" class="form-control" required>
             </div>
             <div class="form-group">
                 <label for="dataSaida">Data e hora de Saída:</label>
