added strong element to the labels and added an img to the center of the screen

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -30,20 +30,24 @@
             <div class="col-12">
                 <div class="text-center">
                     <h1>LOGIN</h1>
-                    <p>Diário de Bordo</p>
+                    
+                </div>
+
+                <div class="banner">
+                    <img src="assets/img/Logo2.png" alt="diario_de_bordo_imagem" >
                 </div>
 
                 <form action="/login" method="post">
                     <div class="mb-3">
-                        <label for="username" class="form-label">Id de Usuário:</label>
+                        <label for="username" class="form-label"><strong> ID de Usuário:</strong></label>
                         <input type="text" class="form-control" id="username" placeholder="exemplo@email.com" name="username" required>
                     </div>
                     <div class="mb-3">
-                        <label for="password" class="form-label">Senha:</label>
+                        <label for="password" class="form-label"><strong>Senha:</strong></label>
                         <input type="password" class="form-control" id="password" placeholder="sua senha aqui" name="password" required>
                     </div>
                     <div class="text-center">
-                        <button type="submit" class="btn btn-secondary">Entrar</button>
+                        <button type="submit" class="btn btn-secondary"><strong>Entrar</strong></button>
                     </div>
                 </form>
             </div>
