--- a/public/assets/menus.css
+++ b/public/assets/menus.css
@@ -9,14 +9,48 @@ body, html {
     background-position: center; 
     background-repeat: no-repeat; 
 }
-.header, .footer {
+.form-label{
+    color: aliceblue;
+    font-size: large;
+}
+
+.text-center{
+    color: aliceblue;
+    font-size: large;
+}
+.header {
+    background-color: #346c02;
+    height: 70px;
+    line-height: 70px; 
+    color: aliceblue;
+    box-shadow: 0px 5px 20px black;
+    display: flex;
+    align-items: center; 
+    justify-content: space-between;
+    padding: 0 20px;
+    z-index: 999;
+}
+
+.header .logo {
+    flex: 0 0 auto; /* para a logo não encolher */
+}
+
+.header h1 {
+    flex: 1 0 auto; /* Faz com que o título ocupe o espaço restante */
+    text-align: center;
+    margin: 0;
+}
+
+.footer{
     background-color: #346c02;
     height: 70px;
     line-height: 50px;
     text-align: center;
     border-radius: 10px;
     color: aliceblue;
+    box-shadow: 0px 5px 20px black;
 }
+
 .container {
     flex: 1;
     display: flex;
@@ -34,4 +68,17 @@ body, html {
     font-size: 18px;
     background-color: #346c02;
     color:aliceblue 
+}
+
+.logo img {
+    width: 100px;
+    height: auto;
+    border-radius: 10px;
+}
+
+.banner{
+    height:200px;
+    display: flex;
+    margin-bottom: 10%;
+    padding: 0%;
 }
