correct the logo url to the right path

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <header class="header">
     
-    <div class="logo"><a href="index.html"><img src="assets/img/Logo1.png" alt="logo"></a> </div>
+    <div class="logo"><a href="../login"><img src="assets/img/Logo1.png" alt="logo"></a> </div>
     <h1><%= title %></h1>
 </header>
