--- a/views/motoristas/menu-adm.ejs
+++ b/views/motoristas/menu-adm.ejs
@@ -16,13 +16,13 @@
     <!-- Header -->
     <%- include('../partials/header.ejs', { title: 'Menu de opções do administrador' }) %>
     <div class="container">
-        <p>Olá, <%= user.nome %>, selecione o que deseja fazer:</p>
-        <button class="btn btn-secondary" onclick="location.href='../veiculos/gerenciar-veiculos'">Gerenciar Veículos</button>
-        <button class="btn btn-secondary" onclick="location.href='/motoristas/gerenciar-motoristas'">Gerenciar Motoristas</button>
-        <button class="btn btn-secondary" onclick="location.href='../viagens/historico'">Histórico</button>
-        <button class="btn btn-secondary" onclick="location.href='../viagens/adicionar-saida'">Adicionar Saída</button>
-        <button class="btn btn-secondary" onclick="location.href='../viagens/adicionar-chegada'">Adicionar Chegada</button>
-        <button class="btn btn-secondary" onclick="location.href='/login'">Voltar</button>
+    <strong><p>Olá, <%= user.nome %>, selecione o que deseja fazer:</p></strong>
+        <button class="btn btn-secondary" onclick="location.href='../veiculos/gerenciar-veiculos'"><strong>Gerenciar Veículos</strong></button>
+        <button class="btn btn-secondary" onclick="location.href='/motoristas/gerenciar-motoristas'"><strong>Gerenciar Motoristas</strong></button>
+        <button class="btn btn-secondary" onclick="location.href='../viagens/historico'"><strong>Histórico</strong></button>
+        <button class="btn btn-secondary" onclick="location.href='../viagens/adicionar-saida'"><strong>Adicionar Saída</strong></button>
+        <button class="btn btn-secondary" onclick="location.href='../viagens/adicionar-chegada'"><strong>Adicionar Chegada</strong></button>
+        <button class="btn btn-secondary" onclick="location.href='/login'"><strong>Voltar</strong></button>
     </div>
     <!-- Footer -->
     <%- include('../partials/footer.ejs') %>
