--- a/public/assets/forms.css
+++ b/public/assets/forms.css
@@ -9,12 +9,37 @@ body, html {
     background-position: center; 
     background-repeat: no-repeat;
 }
-.header, .footer {
-    background: #346c02;
-    height: 50px; 
-    line-height: 50px; 
-    text-align: center; 
+.header {
+    background-color: #346c02;
+    height: 70px;
+    line-height: 70px; 
     color: aliceblue;
+    box-shadow: 0px 5px 20px black;
+    display: flex;
+    align-items: center; 
+    justify-content: space-between;
+    padding: 0 20px;
+    z-index: 999;
+}
+
+.header .logo {
+    flex: 0 0 auto; /* para a logo não encolher */
+}
+
+.header h1 {
+    flex: 1 0 auto; /* pro título ñ ocupar o espaço restante */
+    text-align: center;
+    margin: 0;
+}
+
+.footer{
+    background-color: #346c02;
+    height: 70px;
+    line-height: 50px;
+    text-align: center;
+    border-radius: 10px;
+    color: aliceblue;
+    box-shadow: 0px 5px 20px black;
 }
 .container {
     flex: 1;
