--- a/views/motoristas/menu-adm.ejs
+++ b/views/motoristas/menu-adm.ejs
@@ -11,6 +11,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="/assets/menus.css">
 
+     <!-- FAVICON -->
+     <link href="/assets/img/Logo1.png" rel="icon">
+     <!-- ICONS -->
+     <script src="https://kit.fontawesome.com/34e6a5e2fc.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <!-- Header -->
