replaced favicon logo for the jacarei flag

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     
     <!-- FAVICON -->
-    <link href="/assets/img/Logo1.png" rel="icon">
+    <link href="/assets/img/logo_jacarei.png" rel="icon">
     <!-- ICONS -->
     <script src="https://kit.fontawesome.com/34e6a5e2fc.js" crossorigin="anonymous"></script>
     
