--- a/views/viagens/adicionar-chegada.ejs
+++ b/views/viagens/adicionar-chegada.ejs
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/forms.css">
 
      <!-- FAVICON -->
-     <link href="/assets/img/Logo1.png" rel="icon">
+     <link href="/assets/img/logo_jacarei.png" rel="icon">
      <!-- ICONS -->
      <script src="https://kit.fontawesome.com/34e6a5e2fc.js" crossorigin="anonymous"></script>
 
