--- a/views/viagens/historico.ejs
+++ b/views/viagens/historico.ejs
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-    
+    <link rel="stylesheet" type="text/css" href="/assets/historico.css"> 
      <!-- FAVICON -->
      <link href="/assets/img/logo_jacarei.png" rel="icon">
      <!-- ICONS -->
@@ -19,7 +19,7 @@
     <%- include('../partials/header.ejs', { title: 'Historico de viagens/Log de viagens' }) %>
 
     <div class="container">
-        <h1>Histórico de Viagens</h1>
+        
         <table class="table table-striped">
             <thead>
                 <tr>
