--- a/public/assets/historico.css
+++ b/public/assets/historico.css
@@ -3,56 +3,66 @@ body, html {
     margin: 0;
     display: flex;
     flex-direction: column;
-    background:#43bc83;
+    background: #43bc83;
     background-size: cover;
-    background-position: center; 
-    
+    background-position: center;
 }
-p {
+
+p, .form-label, .text-center {
     color: aliceblue;
     font-size: large;
 }
 
-.form-label{
-    color: aliceblue;
-    font-size: large;
-}
-
-.text-center{
-    color: aliceblue;
-    font-size: large;
-}
 .header {
     background-color: #346c02;
     height: 70px;
-    line-height: 70px; 
+    line-height: 70px;
     color: aliceblue;
     box-shadow: 0px 5px 20px black;
     display: flex;
-    align-items: center; 
+    align-items: center;
     justify-content: space-between;
     padding: 0 20px;
     z-index: 999;
+    flex-wrap: wrap; /* Adicionado para suportar quebra de linha em telas menores */
 }
 
 .header .logo {
-    flex: 0 0 auto; /* para a logo não encolher */
+    flex: 0 0 auto;
 }
 
 .header h1 {
-    flex: 1 0 auto;/* pro título ñ ocupar o espaço restante */
+    flex: 1 0 auto;
     text-align: center;
     margin: 0;
 }
 
-.footer{
+.header nav {
+    flex: 1 0 auto;
+    text-align: right;
+}
+
+.header nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.header nav ul li {
+    margin-left: 20px;
+}
+
+.footer {
     background-color: #346c02;
     height: 70px;
     line-height: 50px;
     text-align: center;
-    border-radius: 10px;
     color: aliceblue;
     box-shadow: 0px 5px 20px black;
+    padding: 10px 20px;
+    flex-wrap: wrap;
 }
 
 .container {
@@ -61,17 +71,17 @@ p {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 500px;
     margin: 0 auto;
     padding-top: 20px;
 }
+
 .btn {
     margin-bottom: 10px;
-    width: 80%; 
-    padding: 20px; 
+    width: 80%;
+    padding: 20px;
     font-size: 18px;
     background-color: #346c02;
-    color:aliceblue 
+    color: aliceblue;
 }
 
 .logo img {
@@ -80,9 +90,66 @@ p {
     border-radius: 10px;
 }
 
-.banner{
-    height:200px;
+.banner {
+    height: 200px;
     display: flex;
     margin-bottom: 10%;
     padding: 0%;
+}
+
+.table-responsive {
+    width: 100%;
+}
+
+.table {
+    margin-bottom: 0;
+}
+
+.table thead {
+    background-color: #346c02;
+    color: aliceblue;
+}
+
+.table-striped tbody tr:nth-of-type(odd) {
+    background-color: rgba(0, 0, 0, 0.05);
+}
+
+.table-hover tbody tr:hover {
+    background-color: rgba(0, 0, 0, 0.075);
+}
+
+.table td, .table th {
+    vertical-align: middle;
+    text-align: center;
+}
+
+@media (max-width: 768px) {
+    .table-responsive {
+        overflow-x: auto;
+    }
+    
+    .header, .footer {
+        height: auto; 
+        line-height: normal; 
+        padding: 10px;
+    }
+    
+    .header h1, .footer {
+        text-align: center;
+        flex: 1 100%; 
+    }
+    
+    .header .logo, .header nav {
+        flex: 1 100%; 
+        text-align: center;
+        margin-bottom: 10px;
+    }
+    
+    .header nav ul {
+        justify-content: center; 
+    }
+    
+    .header nav ul li {
+        margin-left: 10px;
+    }
 }
