--- a/public/assets/forms.css
+++ b/public/assets/forms.css
@@ -7,7 +7,7 @@ body, html {
     background-image: url('/assets/img/3greenDiarioBackground.png');
     background-size: cover;
     background-position: center; 
-    background-repeat: no-repeat;
+    
 }
 .header {
     background-color: #346c02;
@@ -75,3 +75,34 @@ button[type="submit"], button[type="button"] {
     border-radius: 10px;
 }
 
+
+@media (max-width: 768px) {
+    .table-responsive {
+        overflow-x: auto;
+    }
+    
+    .header {
+        height: auto; 
+        line-height: normal; 
+        padding: 10px;
+    }
+    
+    .header h1 {
+        text-align: center;
+        flex: 1 100%; 
+    }
+    
+    .header .logo, .header nav {
+        flex: 1 100%; 
+        text-align: center;
+        margin-bottom: 10px;
+    }
+    
+    .header nav ul {
+        justify-content: center; 
+    }
+    
+    .header nav ul li {
+        margin-left: 10px;
+    }
+}
