style - added fontawesome icons for each button or label

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -29,8 +29,9 @@
         <div class="row">
             <div class="col-12">
                 <div class="text-center">
-                    <h1>LOGIN</h1>
-                    
+                    <h1>LOGIN
+                    <i class="fa-solid fa-user" style="color: #ffffff;"></i>
+                    </h1>
                 </div>
 
                 <div class="banner">
@@ -39,15 +40,15 @@
 
                 <form action="/login" method="post">
                     <div class="mb-3">
-                        <label for="username" class="form-label"><strong> ID de Usuário:</strong></label>
+                        <label for="username" class="form-label"><strong> ID de Usuário <i class="fa-solid fa-user" style="color: #ffffff;"></i> :</strong></label>
                         <input type="text" class="form-control" id="username" placeholder="exemplo@email.com" name="username" required>
                     </div>
                     <div class="mb-3">
-                        <label for="password" class="form-label"><strong>Senha:</strong></label>
+                        <label for="password" class="form-label"><strong>Senha <i class="fa-solid fa-lock" style="color: #ffffff;"></i> :</strong></label>
                         <input type="password" class="form-control" id="password" placeholder="sua senha aqui" name="password" required>
                     </div>
                     <div class="text-center">
-                        <button type="submit" class="btn btn-secondary"><strong>Entrar</strong></button>
+                        <button type="submit" class="btn btn-secondary"><strong>Entrar <i class="fa-solid fa-right-to-bracket"></i></strong></button>
                     </div>
                 </form>
             </div>
