--- a/views/viagens/historico.ejs
+++ b/views/viagens/historico.ejs
@@ -61,7 +61,7 @@
                 </select>
             </div>
             <div class="col-md-3 d-flex align-items-end">
-                <button type="submit" class="btn btn-primary w-100">Filtrar</button>
+                <button type="submit" class="btn btn-primary w-100"><i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i> Filtrar</button>
             </div>
         </div>
     </form>
