feat - added "Limpar" button to clear the filters. Added class "form-container" to add padding to the filter form

--- a/public/assets/historico.css
+++ b/public/assets/historico.css
@@ -123,6 +123,10 @@ p, .form-label, .text-center {
     text-align: center;
 }
 
+.form-container {
+    padding: 20px;
+}
+
 @media (max-width: 768px) {
     .table-responsive {
         overflow-x: auto;
