--- a/views/viagens/historico.ejs
+++ b/views/viagens/historico.ejs
@@ -8,10 +8,56 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="/assets/historico.css"> 
+     <!-- jQuery -->
+     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+     <!-- jQuery UI JS -->
+     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <!-- FAVICON -->
     <link href="/assets/img/logo_jacarei.png" rel="icon">
     <!-- ICONS -->
     <script src="https://kit.fontawesome.com/34e6a5e2fc.js" crossorigin="anonymous"></script>
+    <script>
+        $(document).ready(function() {
+            // pegando os itinerários e serviços do servidor
+            var itinerarios = <%- JSON.stringify(itinerarios) %>;
+            var servicos = <%- JSON.stringify(servicos) %>;
+            var modelos = <%- JSON.stringify(modelos) %>;
+            var placas = <%- JSON.stringify(placas) %>;
+            var nomes = <%- JSON.stringify(nomes) %>;
+            var assuntos = <%- JSON.stringify(assuntos) %>;
+            var envolvidos = <%- JSON.stringify(envolvidos) %>;
+
+            // juntando assuntos e envolvidos em um array único para autocomplete e modelos e placas idem
+            var ocorrencias = [...assuntos, ...envolvidos];
+            var veiculos = [...modelos, ...placas];
+            
+            $("#itinerario").autocomplete({
+                source: itinerarios,
+                minLength: 1
+            });
+            
+            $("#servico").autocomplete({
+                source: servicos,
+                minLength: 1
+            });
+            
+            $("#veiculo").autocomplete({
+                source: veiculos,
+                minLength: 1
+            });
+
+            $("#usuario").autocomplete({
+                source: nomes,
+                minLength: 1
+            });
+            
+            $("#ocorrencia").autocomplete({
+                source: ocorrencias,
+                minLength: 1
+            });  
+           
+        });
+    </script>
 </head>
 <body>
     <!-- Header -->
@@ -30,11 +76,11 @@
                 <input type="text" class="form-control" id="veiculo" name="veiculo" placeholder="Modelo ou Placa">
             </div>
             <div class="col-md-3">
-                <label for="data_inicio" class="form-label">Data Início</label>
+                <label for="data_inicio" class="form-label">Data Inicial</label>
                 <input type="date" class="form-control" id="data_inicio" name="data_inicio">
             </div>
             <div class="col-md-3">
-                <label for="data_fim" class="form-label">Data Fim</label>
+                <label for="data_fim" class="form-label">Data Final</label>
                 <input type="date" class="form-control" id="data_fim" name="data_fim">
             </div>
         </div>
@@ -45,21 +91,13 @@
             </div>
             <div class="col-md-3">
                 <label for="itinerario" class="form-label">Itinerário</label>
-                <select class="form-select" id="itinerario" name="itinerario">
-                    <option value="">Todos</option>
-                    <% itinerarios.forEach(itinerario => { %>
-                        <option value="<%= itinerario %>"><%= itinerario %></option>
-                    <% }); %>
-                </select>
+                <input type="text" class="form-control" id="itinerario" name="itinerario"  placeholder="Destinos/rotas">
+                   
             </div>
             <div class="col-md-3">
                 <label for="servico" class="form-label">Serviço</label>
-                <select class="form-select" id="servico" name="servico">
-                    <option value="">Todos</option>
-                    <% servicos.forEach(servico => { %>
-                        <option value="<%= servico %>"><%= servico %></option>
-                    <% }); %>
-                </select>
+                <input type="text" class="form-control" id="servico" name="servico" placeholder="Serviço prestado">
+                  
             </div>
             <div class="col-md-3 d-flex align-items-end">
                 <button type="submit" class="btn btn-primary w-50"><i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i> Filtrar</button>
