--- a/public/assets/forms.css
+++ b/public/assets/forms.css
@@ -66,6 +66,14 @@ color: white;
     width: 100%;
     background-color: #346c02;
 }
+
+.btn-primary:hover {
+    background-color: #274f03; 
+}
+.btn-primary:focus, .btn:active {
+    background-color: #274f03;
+    color: aliceblue; 
+}
 button[type="submit"], button[type="button"] {
     margin-bottom: 10px;
 }
