--- a/views/viagens/historico.ejs
+++ b/views/viagens/historico.ejs
@@ -111,8 +111,8 @@
     </div>
 
     <div class="container my-5">
-        
-        <div class="table-responsive">
+        <!-- Tabela padrão em telas maiores que 1400px -->
+        <div class="table-responsive d-none d-xl-block">
             <table class="table table-striped table-hover">
                 <thead class="table-dark">
                     <tr>
@@ -120,14 +120,14 @@
                         <th>Usuário</th>
                         <th>Veículo</th>
                         <th>Placa</th>
-                        <th class="d-none d-md-table-cell">Itinerário</th>
-                        <th class="d-none d-lg-table-cell">Serviço</th>
-                        <th class="d-none d-lg-table-cell">Data Saída</th>
-                        <th class="d-none d-lg-table-cell">Data Chegada</th>
-                        <th class="d-none d-lg-table-cell">Km Saída</th>
-                        <th class="d-none d-lg-table-cell">Km Chegada</th>
-                        <th class="d-none d-xl-table-cell">Criado em</th>
-                        <th class="d-none d-xl-table-cell">Modificado em</th>
+                        <th>Itinerário</th> 
+                        <th>Serviço</th> 
+                        <th>Data Saída</th> 
+                        <th>Data Chegada</th> 
+                        <th>Km Saída</th> 
+                        <th>Km Chegada</th> 
+                        <th>Criado em</th> 
+                        <th>Modificado em</th> 
                         <th>Ocorrência</th>
                     </tr>
                 </thead>
@@ -159,7 +159,34 @@
                 </tbody>
             </table>
         </div>
+    
+        <!-- Cards para as telas menores que 1400px -->
+        <div class="d-xl-none">
+            <% viagens.forEach(viagem => { %>
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <h5 class="card-title">Viagem <%= viagem.viagem_ID %></h5>
+                        <p class="card-text"><strong>Usuário:</strong> <%= viagem.nome %></p>
+                        <p class="card-text"><strong>Veículo:</strong> <%= viagem.modelo %> - <%= viagem.placa %></p>
+                        <p class="card-text"><strong>Itinerário:</strong> <%= viagem.itinerario %></p>
+                        <p class="card-text"><strong>Serviço:</strong> <%= viagem.servico %></p>
+                        <p class="card-text"><strong>Data Saída:</strong> <%= viagem.dataSaida %></p>
+                        <p class="card-text"><strong>Data Chegada:</strong> <%= viagem.dataChegada %></p>
+                        <p class="card-text"><strong>Km Saída:</strong> <%= viagem.kmSaida %></p>
+                        <p class="card-text"><strong>Km Chegada:</strong> <%= viagem.kmChegada %></p>
+                        <p class="card-text"><strong>Criado em:</strong> <%= viagem.createdAt %></p>
+                        <p class="card-text"><strong>Modificado em:</strong> <%= viagem.updatedAt %></p>
+                        <% if (viagem.ocorrencias && viagem.ocorrencias.length > 0) { %>
+                            <p class="card-text"><strong>Ocorrência:</strong> <%= viagem.ocorrencias[0].assunto %> - <%= viagem.ocorrencias[0].envolvidos %></p>
+                        <% } else { %>
+                            <p class="card-text">Nenhuma ocorrência</p>
+                        <% } %>
+                    </div>
+                </div>
+            <% }); %>
+        </div>
     </div>
+    
 
     <!-- Footer -->
     <%- include('../partials/footer.ejs') %>
