--- a/public/assets/historico.css
+++ b/public/assets/historico.css
@@ -92,7 +92,17 @@ p, .form-label, .text-center {
     margin: 0 auto;
     padding-top: 20px;
 }
-
+.button-container {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 20px; 
+}
+.button-container .button{
+    width: 50px; 
+    padding: 10px 15px;
+    font-size: 14px;
+}
 .btn {
     margin-bottom: 10px;
     width: 80%;
