fix: fixed the "voltar" button which containd the return method. Now using the "history.back()" method to return to the previous page as opposed to the previous page directory

--- a/views/motoristas/gerenciar-motoristas.ejs
+++ b/views/motoristas/gerenciar-motoristas.ejs
@@ -15,6 +15,6 @@
 </head>
 <body>
     <h1>Gerenciar Motoristas</h1>
-    <button onclick="location.href='/login'">Voltar</button>
+    <button onclick="history.back()">Voltar</button>
 </body>
 </html>
