--- a/views/ocorrencias/adicionar-ocorrencia.ejs
+++ b/views/ocorrencias/adicionar-ocorrencia.ejs
@@ -47,6 +47,6 @@
         <button type="button" onclick="salvarDados()">Confirmar</button>
     </form>
 
-    <button onclick="location.href='/login'">Voltar</button>
+    <button onclick="history.back()">Voltar</button>
 </body>
 </html>
