--- a/views/veiculos/gerenciar-veiculos.ejs
+++ b/views/veiculos/gerenciar-veiculos.ejs
@@ -15,6 +15,6 @@
 </head>
 <body>
     <h1>Gerenciar Veículos</h1>
-    <button onclick="location.href='/login'">Voltar</button>
+    <button onclick="history.back()">Voltar</button>
 </body>
 </html>
