--- a/views/viagens/adicionar-chegada.ejs
+++ b/views/viagens/adicionar-chegada.ejs
@@ -111,7 +111,7 @@
             </div>
         </div>
 
-        <button type="button" class="btn btn-primary" onclick="location.href='/login'"><strong>Voltar</strong></button>
+        <button type="button" class="btn btn-primary" onclick="history.back()"><strong>Voltar</strong></button>
     </div>
     <!-- Footer -->
     <%- include('../partials/footer.ejs') %>
