--- a/views/viagens/adicionar-saida.ejs
+++ b/views/viagens/adicionar-saida.ejs
@@ -128,7 +128,7 @@
             </div>
             <button type="submit" class="btn btn-primary"><strong>Confirmar</strong></button>
         </form>
-        <button type="button" class="btn btn-primary" onclick="location.href='/login'"><strong>Voltar</strong></button>
+        <button type="button" class="btn btn-primary" onclick="history.back()"><strong>Voltar</strong></button>
     </div>
     <!-- Footer -->
     <%- include('../partials/footer.ejs') %>
