--- a/views/viagens/historico.ejs
+++ b/views/viagens/historico.ejs
@@ -125,6 +125,11 @@
     </div>
 
     <div class="container my-5">
+        <div class="alert alert-info" role="alert">
+            <h3>Historico de viagens - Secretaria de Saúde de Jacareí</h3>
+            Esse report foi gerado em: <strong><%= dataAtual %></strong><br>
+            Filtros: <strong><%= filtrosExibidos %></strong>
+        </div>
         <!-- Tabela padrão em telas maiores que 1400px -->
         <div class="table-responsive d-none d-xl-block">
             <table class="table table-striped table-hover">
