--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/assets/menus.css">
+    <link rel="stylesheet" type="text/css" href="/assets/login.css">
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
@@ -22,7 +22,7 @@
 <body>
 
     <!-- Header -->
-    <%- include('./partials/header.ejs', { title: 'Diário de Bordo - Login' }) %>
+    <%- include('./partials/header.ejs', { title: 'Diário de Bordo' }) %>
 
     <!-- Main Content -->
     <div class="container d-flex justify-content-center align-items-center main-content">
